--- a/platEditor/platEditor/platEditor.csproj
+++ b/platEditor/platEditor/platEditor.csproj
@@ -39,6 +39,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\DarkSide\bin\x86\Debug\FarseerPhysics.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Build.Framework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.Build.Utilities" />
     <Reference Include="Microsoft.Xna.Framework, Version=3.1.0.0, Culture=neutral, PublicKeyToken=6d5c3888ef60e27d, processorArchitecture=x86" />
     <Reference Include="Microsoft.Xna.Framework.Game, Version=3.1.0.0, Culture=neutral, PublicKeyToken=6d5c3888ef60e27d, processorArchitecture=x86" />
     <Reference Include="System" />
@@ -56,37 +58,38 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="XnaDevRu.Assets, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="XnaDevRu.ContentBuilder.Framework, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>.\XnaDevRu.Assets.dll</HintPath>
+      <HintPath>.\XnaDevRu.ContentBuilder.Framework.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Forms\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="GraphicsDeviceControl.cs">
+    <Compile Include="engine\GraphicsDeviceControl.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="GraphicsDeviceService.cs">
+    <Compile Include="engine\GraphicsDeviceService.cs">
     </Compile>
-    <Compile Include="InitForm.cs">
+    <Compile Include="Forms\InitForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="InitForm.Designer.cs">
+    <Compile Include="Forms\InitForm.Designer.cs">
       <DependentUpon>InitForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ObjectFactory.cs" />
+    <Compile Include="Help\ContentFactory.cs" />
+    <Compile Include="Help\ObjectFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="InitForm.resx">
+    <EmbeddedResource Include="Forms\InitForm.resx">
       <DependentUpon>InitForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
@@ -100,6 +103,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -109,8 +113,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="ServiceContainer.cs" />
-    <Compile Include="Game.cs">
+    <Compile Include="engine\ServiceContainer.cs" />
+    <Compile Include="engine\Game.cs">
       <SubType>Component</SubType>
     </Compile>
   </ItemGroup>
