modified:   platEditor/platEditor.suo 	modified:   platEditor/platEditor/bin/Debug/platEditor.exe 	modified:   platEditor/platEditor/bin/Debug/platEditor.pdb 	modified:   platEditor/platEditor/obj/Debug/ResolveAssemblyReference.cache 	modified:   platEditor/platEditor/obj/Debug/platEditor.csproj.GenerateResource.Cache 	modified:   platEditor/platEditor/obj/Debug/platEditor.exe 	modified:   platEditor/platEditor/obj/Debug/platEditor.pdb 	modified:   platEditor/platEditor/platEditor.csproj

--- a/platEditor/platEditor/platEditor.csproj
+++ b/platEditor/platEditor/platEditor.csproj
@@ -60,7 +60,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="XnaDevRu.ContentBuilder.Framework, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>.\XnaDevRu.ContentBuilder.Framework.dll</HintPath>
+      <HintPath>..\..\XCB_Source\XnaDevRu.ContentBuilder.Framework\bin\Debug\XnaDevRu.ContentBuilder.Framework.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
