--- a/Platformator/Platformator/platformator.csproj
+++ b/Platformator/Platformator/platformator.csproj
@@ -129,6 +129,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="MyIcon.ico" />
+    <None Include="Resources\menu.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
