modified:   DarkSide/Content/obj/x86/Debug/ContentPipeline.xml 	modified:   DarkSide/DarkSide.csproj 	modified:   DarkSide/bin/x86/Debug/Content/effects/sprite.xnb 	modified:   DarkSide/bin/x86/Debug/Content/init.lil 	modified:   DarkSide/bin/x86/Debug/Content/init.pdb 	modified:   DarkSide/bin/x86/Debug/Content/menuInit.lil 	modified:   DarkSide/bin/x86/Debug/Content/menuInit.pdb 	modified:   DarkSide/bin/x86/Debug/Content/platInit1.lil 	modified:   DarkSide/bin/x86/Debug/Content/platInit1.pdb 	modified:   DarkSide/bin/x86/Debug/Content/platInit2.lil 	modified:   DarkSide/bin/x86/Debug/Content/platInit2.pdb 	modified:   DarkSide/bin/x86/Debug/DarkSide.exe 	modified:   DarkSide/bin/x86/Debug/DarkSide.pdb 	modified:   DarkSide/engine/gameList.cs 	modified:   DarkSide/engine/mesh2D.cs 	new file:   DarkSide/engine/monster.cs 	modified:   DarkSide/engine/object.cs 	modified:   DarkSide/obj/x86/Debug/DarkSide.exe 	modified:   DarkSide/obj/x86/Debug/DarkSide.pdb 	modified:   Platformator/Content/Content.contentproj 	new file:   Platformator/Content/models/plat..x 	modified:   Platformator/Content/scripts/platInit1.lua 	modified:   Platformator/Platformator.suo 	modified:   Platformator/Platformator/bin/Debug/Content/effects/sprite.xnb 	modified:   Platformator/Platformator/bin/Debug/Content/plat1.lil 	modified:   Platformator/Platformator/bin/Debug/Content/plat1.pdb 	modified:   Platformator/Platformator/bin/Debug/DarkSide.exe 	modified:   Platformator/Platformator/bin/Debug/DarkSide.pdb 	new file:   Platformator/Platformator/bin/Debug/Microsoft.Xna.Framework.Content.Pipeline.dll 	modified:   Platformator/Platformator/bin/Debug/XnaDevRu.ContentBuilder.Framework.dll 	modified:   Platformator/Platformator/bin/Debug/XnaDevRu.ContentBuilder.Framework.pdb 	new file:   Platformator/Platformator/bin/Debug/dlls/Microsoft.Xna.Framework.Content.Pipeline.AudioImporters.dll 	new file:   Platformator/Platformator/bin/Debug/dlls/Microsoft.Xna.Framework.Content.Pipeline.EffectImporter.d

--- a/DarkSide/DarkSide.csproj
+++ b/DarkSide/DarkSide.csproj
@@ -96,6 +96,7 @@
     <Compile Include="engine\button.cs" />
     <Compile Include="engine\lua.cs" />
     <Compile Include="engine\gameList.cs" />
+    <Compile Include="engine\monster.cs" />
     <Compile Include="engine\rope.cs" />
     <Compile Include="engine\timer.cs" />
     <Compile Include="game\menu.cs" />
